--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,22 @@
     padding: 0;
     box-sizing: border-box;}
 
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img{
+    width: 150px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+button{
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
+}
